2010-12-11 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: Reverted baking to_table cost. Added missing else statement in to_table.

2010-12-11 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: I fixed a crash in the baking schedule state find_leftovers caused by the
		oven getting cached out.

2010-12-11 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: In baking schedule, clear_display and remove_food now use the new baked
		quality. I changed size() check to empty() for use_potion.

2010-12-11 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.*: The baking schedule should now clean up when needed. Flour, dough, and baked
		goods from left over from old saved games will not be cleaned up since this relies on
		quality number. Quality 50 is for dough	and quality 51 is for items that have been
		placed in the oven.

2010-12-11 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: Reverting 6515 changes since the temporary schedule items will likely crash
		during chunk cache out (Avatar death is a good example).

2010-12-10 Malignant Manor <malignantmanor@users.sourceforge.net>
	* Actors.cc: Npcs do not heal hourly if poisoned. If in the party, they also don't heal if
		starving or freezing. Overheating in SI is not checked since overheating is handled by
		usecode function 0x6AF.
	* keyactions.cc: I fixed fullscreen toggle for OpenGL.
	* defaultkeys.txt: Alt-V (Cmd-V) is now an alternate key to create last shape due to newer
		Apple Macintosh keyboards lacking the insert key.

2010-12-10 Malignant Manor <malignantmanor@users.sourceforge.net>
	* schedule.*: Added checks in Talk_schedule::now_what so the npcs doesn't item_say if the
		Avatar is unreachable. Changed costs in baking schedule to help prevent failures.
		Changed baking schedule so that the display table is cleared of food before getting full.